<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".selectActivity">

    <Button
        android:id="@+id/bt_alcohol"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:text="@string/id_alcohol"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_alcohol"

        android:layout_marginHorizontal="@dimen/margin_horizon_type_item"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bt_snacks"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bt_sin_alcohol" />

    <Button
        android:id="@+id/bt_sin_alcohol"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:text="@string/id_sin_alcohol"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_sin_alcohol"

        android:layout_marginHorizontal="@dimen/margin_horizon_type_item"

        app:layout_constraintStart_toEndOf="@id/bt_alcohol"
        app:layout_constraintBottom_toTopOf="@+id/bt_souvenirs"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bt_snacks"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:text="@string/id_snaks"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_snacks"
        android:drawablePadding="10dp"

        android:layout_marginHorizontal="@dimen/margin_horizon_type_item"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_alcohol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_souvenirs"/>

    <Button
        android:id="@+id/bt_souvenirs"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:text="@string/id_souvenir"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_souvenir"
        android:drawablePadding="10dp"

        android:layout_marginHorizontal="@dimen/margin_horizon_type_item"

        app:layout_constraintStart_toEndOf="@+id/bt_snacks"
        app:layout_constraintTop_toBottomOf="@+id/bt_sin_alcohol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>