<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".SaleBtActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <TextView
            android:id="@+id/tit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRIVADO"
            android:textSize="30dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="boutique rooms"
            android:textColor="@color/black"
            android:layout_below="@+id/tit"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#Cfff"
        android:orientation="vertical">


        <View
            android:layout_width="match_parent"
            android:layout_height="80dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:text="@string/sale_monto_total"/>

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="compras"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btSaleCancelar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/bagroundlogin"
                android:text="@string/sale_cancelar"/>

            <Button
                android:id="@+id/btSalePagar"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="80dp"
                android:textSize="30sp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:background="@drawable/bagroundlogin"
                android:text="@string/sale_pagar"/>

        </LinearLayout>




        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/darker_gray"
            android:layout_below="@+id/listen"
            android:layout_alignParentStart="true"
            android:layout_marginTop="31dp" />
    </LinearLayout>



</LinearLayout>