<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".testContra">

    <RelativeLayout
        android:id="@+id/encabesetti"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



            <ImageView
                android:gravity="center"
                android:id="@+id/backSelectReporte"
                android:layout_width="60dp"
                android:layout_height="70dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:layout_marginLeft="5dp"
                android:src="@drawable/ic_back_black" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PRIVADO"
                    android:textSize="30dp"
                    android:textColor="@color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="boutique rooms"
                    android:textColor="@color/black"
                    android:layout_below="@+id/tit"/>
            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>


    <LinearLayout
        android:id="@+id/laber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:background="@drawable/bagroundsetting"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/encabesetti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label2"
        app:layout_constraintVertical_bias="0.1"


        >

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/date"
                android:background="@color/white"
                android:text="Fecha Inicial"/>


            <EditText
                android:id="@+id/ed_fecha_inicial"
                android:layout_width="match_parent"
                android:ems="10"
                android:textSize="22dp"
                android:layout_height="50dp"
                android:background="#B89660"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="fecha"
                android:paddingLeft="10dp"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/time"
                android:background="@color/white"
                android:text="Hora Inicial"/>



            <EditText
                android:id="@+id/ed_hora_inicial"
                android:layout_width="match_parent"
                android:ems="10"
                android:textSize="22dp"
                android:layout_height="50dp"
                android:background="#B89660"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="hora"
                android:paddingLeft="10dp"
                android:inputType="time"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginRight="90dp"
        android:layout_marginLeft="90dp"
        android:background="@drawable/bagroundsetting"
        android:orientation="horizontal"

        app:layout_constraintTop_toBottomOf="@id/laber1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label3"
        >

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/date"
                android:background="@color/white"
                android:text="Fecha Final"/>


            <EditText
                android:id="@+id/ed_fecha_final"
                android:layout_width="match_parent"
                android:ems="10"
                android:textSize="22dp"
                android:layout_height="50dp"
                android:background="#B89660"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="fecha"
                android:paddingLeft="10dp"
                android:inputType="date"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="200dp"
            android:gravity="center"
            android:padding="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginBottom="20dp"
                android:paddingLeft="20dp"
                android:drawableLeft="@drawable/time"
                android:background="@color/white"
                android:text="Hora Final"/>



            <EditText
                android:id="@+id/ed_hora_final"
                android:layout_width="match_parent"
                android:ems="10"
                android:textSize="22dp"
                android:layout_height="50dp"
                android:background="#B89660"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="hora"
                android:paddingLeft="10dp"
                android:inputType="time"
                android:focusable="false"
                android:clickable="true"
                android:maxLines="1" />
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/label3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:background="@color/white"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/label2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_generar_rp"
        >

        <CheckBox
            android:id="@+id/cheSnack"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:button="@drawable/selector_checkbox"
            android:text="@string/id_snaks"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/cheCon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:button="@drawable/selector_checkbox"
            android:textSize="24sp"
            android:text="@string/id_alcohol" />

        <CheckBox
            android:id="@+id/cheSin"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:button="@drawable/selector_checkbox"
            android:textSize="24sp"
            android:text="@string/id_sin_alcohol" />

        <CheckBox
            android:id="@+id/cheSouven"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:button="@drawable/selector_checkbox"
            android:textSize="24sp"
            android:text="@string/id_souvenir" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_generar_rp"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="Generar Reporte"
        android:textSize="22dp"
        android:textColor="@color/white"
        android:background="#B89660"

        app:layout_constraintTop_toBottomOf="@id/label3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>